--- a/style/style.css
+++ b/style/style.css
@@ -102,6 +102,7 @@ footer {
     background-color: black;
     color: rgb(161, 161, 161);
     text-align: center;
+    padding: 10px;
 }
 
 footer a {
